<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_main"
    app:startDestination="@id/nav_home">
    <fragment android:id="@+id/nav_home" android:name="com.Dramizo.Series.presentation.home.HomeFragment"
        android:label="@string/nav_home" />
    <fragment android:id="@+id/nav_games" android:name="com.Dramizo.Series.presentation.games.GamesFragment"
        android:label="@string/nav_games" />
    <fragment android:id="@+id/nav_drama" android:name="com.Dramizo.Series.presentation.drama.DramaFragment"
        android:label="@string/tab_drama" />
    <fragment android:id="@+id/nav_create_room" android:name="com.Dramizo.Series.presentation.createroom.CreateRoomFragment"
        android:label="@string/my_room" />
    <fragment android:id="@+id/nav_messages" android:name="com.Dramizo.Series.presentation.messages.MessagesFragment"
        android:label="@string/nav_messages" />
    <fragment android:id="@+id/nav_profile" android:name="com.Dramizo.Series.presentation.profile.ProfileFragment"
        android:label="@string/nav_profile" />
</navigation>
